# politiktok

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Dockerfile  FEATURES.md  README.md  build.rs  docker-compose.yml  political_genai_full_specification_v2.docx  tailwind.config.js
.github/workflows/: ci.yml  docs.yml
assets/: main.css  tailwind.css
docs/: book.toml  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: overview.md
docs/architecture/: overview.md  project-structure.md  rag-pipeline.md  tech-stack.md
docs/configuration/: cors-security.md  database.md  environment-variables.md  i18n.md  theming.md
docs/contributing/: code-style.md  development-setup.md  pull-requests.md  testing.md
docs/deployment/: ci-cd.md  docker.md  manual.md  scaling.md
docs/guide/: installation.md  introduction.md  quick-start.md  requirements.md
docs/legal/: impressum.md  privacy-policy.md
docs/modules/: accountability.md  briefings.md  campaign-copy.md  coaching.md  coalition.md  compliance.md  disinfo.md  empathy.md  faction-mapper.md  fundraising.md  knowledge-base.md  media-monitor.md  meetings.md  multilingual.md  opposition-research.md  policy-chatbot.md  regulatory.md  volunteer-matching.md
docs/self-hosting/: backups.md  docker-compose.md  domain-dns.md  maintenance.md  overview.md  reverse-proxy-ssl.md  server-setup.md
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: authentication.md  llm-integration.md
docs/src/development/: contributing.md
docs/src/getting-started/: docker.md  installation.md
docs/src/modules/: admin.md  call-intelligence.md  canvassing.md  local-issues.md  narrative.md  policy-diff.md  question-anticipation.md  sentiment-monitor.md
migrations/: 20240101000000_initial.sql
src/: app.rs  lib.rs
src/components/: alert_banner.rs  badge.rs  card.rs  chart.rs  data_table.rs  feedback.rs  form_fields.rs  header.rs  loading.rs  mod.rs  modal.rs  pagination.rs  sidebar.rs  streaming_text.rs  toast.rs
src/infrastructure/: auth.rs  auth_check.rs  config.rs  db.rs  embedding.rs  error.rs  llm.rs  mod.rs  server_start.rs  state.rs  vector_store.rs
src/infrastructure/middleware/: audit_log.rs  auth.rs  mod.rs
src/models/: candidate.rs  document.rs  donor.rs  mod.rs  roles.rs  social_post.rs  task.rs  user.rs  volunteer.rs  voter.rs
src/modules/: mod.rs
src/modules/accountability/: mod.rs
src/pages/: landing.rs  login.rs  mod.rs  not_found.rs
(+52 files in other folders)
