[package]
name = "politiktok"
version = "0.1.0"
edition = "2021"
default-run = "politiktok"

[[bin]]
name = "politiktok"
path = "bin/main.rs"

[dependencies]
dioxus = { version = "=0.7.3", features = ["fullstack", "router"] }
dioxus-logger = "=0.7.3"
dioxus-sdk = { version = "0.7", features = ["time", "storage"] }
dioxus-free-icons = { version = "0.10", features = ["bootstrap", "font-awesome-solid"] }
dioxus-cli-config = { version = "=0.7.3", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
pulldown-cmark = { version = "0.12", features = ["html"] }

# Server-only dependencies
axum = { version = "0.8", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tower-sessions = { version = "0.15", features = ["memory-store", "signed"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tower = { version = "0.5", optional = true }
tokio = { version = "1", features = ["time", "full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
async-stream = { version = "0.3", optional = true }
dotenvy = { version = "0.15", optional = true }
secrecy = { version = "0.10", optional = true }
url = { version = "2.5", optional = true }
rand = { version = "0.9", optional = true }
argon2 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:sqlx",
    "dep:reqwest",
    "dep:tower-sessions",
    "dep:tower-http",
    "dep:tower",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:async-stream",
    "dep:dotenvy",
    "dep:secrecy",
    "dep:url",
    "dep:rand",
    "dep:argon2",
    "dep:sha2",
    "dep:base64",
    "dep:futures",
    "dep:dioxus-cli-config",
]

[dev-dependencies]
pretty_assertions = "1.4"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
